--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cryptiles": ">=4.1.2",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "eslint": "4.18.2",
