--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ services:
   - docker
 
 script:
-  - docker build --build-arg api_key="$FRIEBASE_API_KEY" -t tombenjaminmorris/admin ./admin
+  - docker build --build-arg api_key="$FRIEBASE_API_KEY" -t tombenjaminmorris/admin ./
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push tombenjaminmorris/admin
