--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
+    "cuid": "^2.1.8",
     "dotenv": "4.0.0",
     "eslint": "4.18.2",
     "eslint-config-react-app": "^2.0.0",
@@ -37,8 +38,10 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.2.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-sortable-hoc": "^1.11.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.18.2",
